tests/compile-fail/spellcheck.rs
#![feature(plugin)]
#![plugin(ronat)]

/// This is an ererererre.
#[deny(spelling_error)]
fn main() {
    let () = true;
}
